--- a/config/config.yaml
+++ b/config/config.yaml
@@ -308,11 +308,12 @@ notification:
       chat_id: ""                     # Telegram Chat ID
 
     email:
-      from: ""                        # 发件人邮箱地址
-      password: ""                    # 发件人邮箱密码或授权码
-      to: ""                          # 收件人邮箱，多个用逗号分隔
-      smtp_server: ""                 # SMTP 服务器（可选，留空自动识别）
-      smtp_port: ""                   # SMTP 端口（可选，留空自动识别）
+  from: ${{ secrets.SMTP_FROM_EMAIL }}
+  password: ${{ secrets.SMTP_PASSWORD }}
+  to: ${{ secrets.RECEIVE_EMAIL }}
+  smtp_server: ${{ secrets.SMTP_SERVER }}
+  smtp_port: ${{ secrets.SMTP_PORT }}
+
 
     ntfy:
       server_url: "https://ntfy.sh"   # ntfy 服务器地址（可改为自托管）
